added whatsapp buttons

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h2 data-aos="fade-up" data-aos-delay="400">Proteja a sua herança com uma equipe de especialistas comprometidos em oferecer soluções jurídicas de alto nível.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
-              <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+              <a href="" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                 <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Falar com um especialista!</span>
               </a>
             </div>
@@ -143,13 +143,18 @@
               </div>
             </div>
           </div>
+        </div> 
 
-          <div class="text-center text-lg-start">
-            <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
-              <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Falar com um especialista!</span>
-            </a>
-          </div>
-        </div> <!-- / row -->
+            <!-- Especialista -->
+    <section class="about" data-aos="fade-up">
+      <div class="text-center">
+        <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center" >
+          <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Falar com um especialista!</span>
+        </a>
+      </div>
+    </section>
+    <!-- Especialista -->
+        <!-- / row -->
 
         <!-- Feature Tabs -->
         <div class="row feture-tabs" data-aos="fade-up">
@@ -234,6 +239,51 @@
     </section>
     <!-- End Services Section -->
 
+        <!-- Especialista -->
+        <section class="about" data-aos="fade-up">
+          <div class="text-center">
+            <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+              <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Agende uma consulta</span>
+            </a>
+          </div>
+        </section>
+        <!-- Especialista -->
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+        <div class="row gx-0">
+
+          <div class="d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
+            <div class="content">
+              <h2>Conhecimento acumulado ao longo de anos de experiência e sucesso em inúmeros inventários concluídos</h2>
+              <p>
+                Somos um escritório de advocacia especializado em Direito Sucessório, com uma equipe experiente e comprometida que se destaca pela excelência na entrega de soluções jurídicas em todo o território nacional.
+              </p><p>
+                Independentemente da complexidade da situação, nossa equipe está preparada para fornecer suporte abrangente e especializado em todos os aspectos do processo sucessório. Nossa abordagem é caracterizada pela agilidade, profissionalismo e, acima de tudo, pelo respeito às questões patrimoniais e familiares sensíveis envolvidas.
+              </p><p>
+                Acreditamos em uma visão estratégica e inovadora no campo do direito das sucessões, buscando sempre a excelência na nossa atuação. Cada caso recebe nossa máxima dedicação, com o objetivo de proporcionar a solução jurídica personalizada e ideal para cada situação. 
+              </p><p>
+                Portanto, se você busca orientação jurídica sólida com uma equipe de especialistas, agende uma consulta e conheça nossos serviços!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End About Section -->
+
+    <!-- Especialista -->
+    <section class="about" data-aos="fade-up">
+      <div class="text-center">
+        <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+          <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Falar com um especialista!</span>
+        </a>
+      </div>
+    </section>
+    <!-- Especialista -->
+
+
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
 
@@ -297,6 +347,7 @@
                   <div class="accordion-body">
                     Inventário é um procedimento legal realizado pelos herdeiros após o falecimento de uma pessoa para partilhar seus bens, liquidar dívidas da pessoa falecida e formalizar a transferência da propriedade desses bens para os herdeiros. O inventário pode ser feito na via judicial ou extrajudicial (em cartório).
                   </div>
+                </div>
               </div>
 
               <div class="accordion-item">
@@ -309,6 +360,7 @@
                   <div class="accordion-body">
                     Oferecemos uma ampla gama de serviços, incluindo inventários judiciais e extrajudiciais, bem como outras ações judiciais relacionadas ao inventário, como a petição de herança, habilitação de herdeiros, obtenção de alvará judicial, sobrepartilha, remoção de inventariante, nulidade de doação inoficiosa e de partilha, anulatória de testamentos, declaratória de simulação, ação de sonegados, ação de haveres, entre outras ações específicas envolvendo Planejamento Sucessório e Direito das Sucessões. 
                   </div>
+                </div>
               </div>
 
               <div class="accordion-item">
@@ -321,6 +373,7 @@
                   <div class="accordion-body">
                     O inventário judicial é um processo proposto perante o Poder Judiciário para a partilha dos bens de uma pessoa falecida. Esse procedimento é necessário quando há herdeiros menores de idade ou incapazes, discordância entre os herdeiros quanto à partilha de bens, ainda, quando não há o reconhecimento de uma pessoa como herdeira e/ou meeira, entre outras situações específicas.
                   </div>
+                </div>
               </div>
 
               <div class="accordion-item">
@@ -426,7 +479,6 @@
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
@@ -436,7 +488,8 @@
     </section>
     <!-- End F.A.Q Section -->
 
-  </main><!-- End #main -->
+  </main>
+  <!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
