added whatsapp api

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h2 data-aos="fade-up" data-aos-delay="400">Proteja a sua herança com uma equipe de especialistas comprometidos em oferecer soluções jurídicas de alto nível.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
-              <a href="" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+              <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                 <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Falar com um especialista!</span>
               </a>
             </div>
@@ -148,7 +148,7 @@
             <!-- Especialista -->
     <section class="about" data-aos="fade-up">
       <div class="text-center">
-        <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center" >
+        <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center" >
           <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Falar com um especialista!</span>
         </a>
       </div>
@@ -239,15 +239,15 @@
     </section>
     <!-- End Services Section -->
 
-        <!-- Especialista -->
-        <section class="about" data-aos="fade-up">
-          <div class="text-center">
-            <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
-              <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Agende uma consulta</span>
-            </a>
-          </div>
-        </section>
-        <!-- Especialista -->
+    <!-- Especialista -->
+    <section class="about" data-aos="fade-up">
+      <div class="text-center">
+        <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+          <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Agende uma consulta</span>
+        </a>
+      </div>
+    </section>
+    <!-- Especialista -->
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
