added whatsapp api last component

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <!-- Especialista -->
     <section class="about" data-aos="fade-up">
       <div class="text-center">
-        <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+        <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
           <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Falar com um especialista!</span>
         </a>
       </div>
