feat: updated content

--- a/index.html
+++ b/index.html
@@ -69,28 +69,32 @@
     <section id="values" class="values">
       <div class="container" data-aos="fade-up">
         <header class="section-header">
-          <p>Seu inventário com menos impostos
+          <p>S
+            eu inventário com estratégia para reduzir impostos
           </p>
         </header>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="box">
               <img src="assets/img/values-1.png" class="img-fluid" alt="">
-              <h3>Reduza os impostos sobre a herança com as melhores estratégias tributárias.
+              <h3>
+                Estratégias tributárias eficientes para reduzir ao máximo os impostos sobre a herança.
               </h3>
             </div>
           </div>
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
             <div class="box">
               <img src="assets/img/values-2.png" class="img-fluid" alt="">
-              <h3>Maximize os resultados do seu inventário com uma equipe especializada em direito sucessório e tributário.
+              <h3>
+                Equipe especializada em direito sucessório e tributário focada em otimizar os resultados do seu inventário.
               </h3>
             </div>
           </div>
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="600">
             <div class="box">
               <img src="assets/img/values-3.png" class="img-fluid" alt="">
-              <h3>Minimize o tempo do inventário com soluções eficientes.
+              <h3>
+                Soluções jurídicas de alto nível para minimizar o tempo do inventário.
               </h3>
             </div>
           </div>
@@ -134,7 +138,7 @@
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>
-                    Potencialize a chance de sucesso com nossa equipe qualificada e especializada em direito sucessório e tributário.
+                    Potencialize a chance de sucesso com uma equipe qualificada e especializada em direito sucessório e tributário.
                   </h3>
                 </div>
               </div>
@@ -143,7 +147,7 @@
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>
-                    Aumente a sua segurança jurídica com a nossa equipe experiente e constantemente atualizada sobre as leis e regulamentações da área.
+                    Aumente a segurança jurídica com uma equipe experiente e constantemente atualizada sobre as leis e regulamentações da área.
                   </h3>
                 </div>
               </div>
@@ -154,7 +158,9 @@
         <!-- Feature Tabs -->
         <div class="row feture-tabs" data-aos="fade-up">
           <div class="col-lg-6">
-            <h3>Conte conosco para . . .</h3>
+            <h3>
+              Nossos objetivos
+            </h3>
 
             <!-- Tabs -->
             <ul class="nav nav-pills mb-3">
@@ -237,7 +243,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Início da Providência Legal</h3>
               <p>
-                Após a assinatura do contrato de honorários, havendo concordância em relação às estratégias jurídicas, iniciaremos as providências legais. Esse passo representa o começo das ações concretas para resolver o caso, conforme as necessidades específicas de cada cliente.
+                Havendo concordância em relação às estratégias jurídicas e a contratação, iniciaremos as providências legais. Esse passo representa o começo das ações concretas para resolver o caso, conforme as necessidades específicas de cada cliente.
               </p>
             </div>
           </div>
@@ -266,7 +272,7 @@
         <div class="row">
           <div class="d-flex flex-column justify-content-center">
             <h1 data-aos="fade-up">
-              Sucesso em inúmeros inventários com máxima economia tributária
+              Valorize o seu tempo com máxima economia no inventário
             </h1>
             <div data-aos="fade-up" data-aos-delay="600" class="text-center">
               <div class="text-center text-lg-start ">
@@ -285,7 +291,9 @@
     <section id="team" class="team">
       <div class="container" data-aos="fade-up">
         <header class="section-header">
-          <p>Sócios Fundadores</p>
+          <p>
+            O Escritório
+          </p>
         </header>
         <div class="row gy-4 align-items-center">
           <div class="col-lg-3 d-flex" data-aos="fade-up" data-aos-delay="100">
@@ -325,12 +333,12 @@
               <h2>Quem somos</h2>
               <p>
                 Somos um escritório de advocacia especializado em Direito Sucessório, com uma equipe experiente que se destaca pela excelência na entrega de soluções jurídicas em todo o território nacional.
-              </p><p>
+              </p>
+              <p>
                 Independente da complexidade da situação, nossa equipe está preparada para fornecer suporte abrangente e especializado, com agilidade, profissionalismo e, acima de tudo, respeito às questões patrimoniais e familiares sensíveis envolvidas.
-              </p><p>
+              </p>
+              <p>
                 Cada caso recebe nossa máxima dedicação, proporcionando a solução jurídica personalizada e ideal para cada situação, com foco na maior economia tributária. Acreditamos que o sucesso do inventário começa pela estratégia tributária mais eficiente. 
-              </p><p>
-                Portanto, se você busca orientação jurídica com uma visão estratégica e inovadora, agende uma consulta e conheça nossos serviços!
               </p>
             </div>
           </div>
@@ -425,7 +433,7 @@
                 </h2>
                 <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    Oferecemos uma ampla gama de serviços, incluindo inventários judiciais e extrajudiciais, bem como outras ações judiciais relacionadas ao inventário, como a petição de herança, habilitação de herdeiros, obtenção de alvará judicial, sobrepartilha, remoção de inventariante, nulidade de doação inoficiosa e de partilha, anulatória de testamentos, declaratória de simulação, ação de sonegados, ação de haveres, ação de repetição de indébito tributário, mandados de segurança, entre outras medidas específicas envolvendo Direito das Sucessões e Direito Tributário. 
+                    Trabalhamos com uma ampla gama de serviços a herdeiros e credores interessados, incluindo a abertura de inventários judiciais e extrajudiciais, bem como outras ações judiciais relacionadas ao inventário, como a petição de herança, habilitação de herdeiros, obtenção de alvará judicial, sobrepartilha, remoção de inventariante, nulidade de doação inoficiosa e de partilha, anulatória de testamentos, declaratória de simulação, ação de sonegados, ação de haveres, ação de repetição de indébito tributário, mandados de segurança, habilitação de crédito, entre outras medidas específicas envolvendo Direito das Sucessões e Direito Tributário. 
                   </div>
                 </div>
               </div>
@@ -433,7 +441,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-6">
-                    O que é um inventário judicial e como funciona?
+                    O que é um inventário judicial?
                   </button>
                 </h2>
                 <div id="faq-content-6" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
@@ -485,12 +493,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-10">
-                    Qual o valor dos nossos serviços?
+                    Qual é o valor dos serviços advocatícios?
                   </button>
                 </h2>
                 <div id="faq-content-10" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    O valor dos nossos serviços advocatícios são ajustados de acordo com a complexidade do caso e as necessidades específicas de cada caso. Para uma avaliação detalhada e uma proposta de honorários personalizada, agende uma consulta com nossa equipe de especialistas.
+                    O valor dos serviços advocatícios são ajustados de acordo com a complexidade do caso e as necessidades específicas de cada caso. 
                   </div>
                 </div>
               </div>
@@ -498,12 +506,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-11">
-                    Quem pode contratar os nossos serviços?
+                    Quem pode contratar esses serviços advocatícios?
                   </button>
                 </h2>
                 <div id="faq-content-11" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    Qualquer pessoa envolvida em questões relacionadas à herança, à sucessão, e aos tributos incidentes pode contratar nossos serviços. Atendemos clientes em todo o território nacional, independentemente do estado onde se encontram.
+                    Qualquer pessoa envolvida em questões relacionadas à herança e à sucessão, inclusive credores interessados, pode contratar os serviços advocatícios, independentemente do estado onde se localizam as(os) clientes e seus advogados, sem prejuízo à eficiência do processo e ao seu prazo de conclusão.
                   </div>
                 </div>
               </div>
@@ -511,13 +519,13 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-12">
-                    Como posso agendar uma consulta e obter mais informações?
+                    Como obter mais informações?
                   </button>
                 </h2>
                 <div id="faq-content-12" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    Basta clicar em um dos botões "Fale com um Especialista" ou "Agende uma Consulta" em nossa página que você será direcionado para o nosso WhatsApp para iniciar uma conversa. <br>
-                    Se preferir, você também pode entrar em contato conosco pelos números de telefone, WhatsApp ou e-mail fornecidos em nosso site oficial  . Estamos à disposição para esclarecer suas dúvidas e ajudá-la(o) a encontrar a melhor solução para suas necessidades na área de Direito das Sucessões.
+                    Basta clicar em um dos botões "Fale com um Especialista" ou "Agende uma Consulta" em nossa página que você será direcionado para o nosso WhatsApp para iniciar uma conversa. 
+                    Se preferir, você também pode entrar em contato conosco pelos números de telefone, WhatsApp ou e-mail fornecidos em nosso site oficial <a href="https://www.terraemendonca.com.br" target="_blank"> www.terraemendonca.com.br</a>
                   </div>
                 </div>
               </div>
