fix: services tittle

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
     <section id="values" class="values">
       <div class="container" data-aos="fade-up">
         <header class="section-header">
-          <p>S
-            eu inventário com estratégia para reduzir impostos
+          <p>Seu inventário com estratégia para reduzir impostos
           </p>
         </header>
         <div class="row">
