fix: images, collors

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="row">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="box">
-              <img src="assets/img/values-1.png" class="img-fluid" alt="">
+              <img src="assets/img/1.png" class="img-fluid rounded" alt="">
               <h3>
                 Estratégias tributárias eficientes para reduzir ao máximo os impostos sobre a herança.
               </h3>
@@ -83,7 +83,7 @@
           </div>
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
             <div class="box">
-              <img src="assets/img/values-2.png" class="img-fluid" alt="">
+              <img src="assets/img/2.png" class="img-fluid" alt="">
               <h3>
                 Equipe especializada em direito sucessório e tributário focada em otimizar os resultados do seu inventário.
               </h3>
@@ -91,7 +91,7 @@
           </div>
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="600">
             <div class="box">
-              <img src="assets/img/values-3.png" class="img-fluid" alt="">
+              <img src="assets/img/3.png" class="img-fluid" alt="">
               <h3>
                 Soluções jurídicas de alto nível para minimizar o tempo do inventário.
               </h3>
@@ -113,7 +113,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/features.png" class="img-fluid" alt="">
+            <img src="assets/img/4.png" class="img-fluid rounded" alt="">
           </div>
 
           <div class="col-lg-8 mt-5 mt-lg-0 d-flex">
@@ -197,7 +197,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <img src="assets/img/features-2.png" class="img-fluid" alt="">
+            <img src="assets/img/5.png" class="img-fluid rounded" alt="">
           </div>
 
         </div>
@@ -228,7 +228,7 @@
 
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-box blue">
+            <div class="service-box orange">
               <i class="ri-discuss-line icon"></i>
               <h3>Consultoria Jurídica Especializada</h3>
               <p>
@@ -248,7 +248,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="service-box green">
+            <div class="service-box orange">
               <i class="ri-discuss-line icon"></i>
               <h3>Relatórios e Acompanhamento do Caso</h3>
               <p>
