updated whatsapp links to target blank and updated faq

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           </h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
-              <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
-                <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Falar com um especialista!</span>
+              <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center"> 
+                <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Fale com um especialista!</span>
               </a>
             </div>
           </div>
@@ -210,13 +210,13 @@
     <!-- CONTATO ESPECIALISTA  -->
     <section class="about" data-aos="fade-up">
       <div class="text-center">
-        <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center" >
-          <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Falar com um especialista!</span>
+        <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center" >
+          <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Quero falar com um especialista!</span>
         </a>
       </div>
     </section>
     <!-- CONTATO ESPECIALISTA  -->
-
+    
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
 
@@ -262,9 +262,6 @@
     </section>
     <!-- End Services Section -->
 
-   
-
-
 
     <section id="hero" class="hero d-flex align-items-center ">
       <div class="container">
@@ -275,7 +272,7 @@
             </h1>
             <div data-aos="fade-up" data-aos-delay="600" class="text-center">
               <div class="text-center text-lg-start ">
-                <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+                <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                   <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Agende uma consulta</span>
                 </a>
               </div>
@@ -346,11 +343,12 @@
     </section>
     <!-- End About Section -->
 
+
     <!-- Especialista -->
     <section class="about" data-aos="fade-up">
       <div class="text-center">
-        <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
-          <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Falar com um especialista!</span>
+        <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+          <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Fale com um especialista!</span>
         </a>
       </div>
     </section>
@@ -445,8 +443,7 @@
                 </h2>
                 <div id="faq-content-6" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    O inventário judicial é um processo proposto perante o Poder Judiciário para a partilha dos bens de uma pessoa falecida. Esse procedimento é necessário quando há herdeiros menores de idade ou incapazes, discordância entre os herdeiros quanto à partilha de bens, ainda, quando não há o reconhecimento de uma pessoa como herdeira e/ou meeira, entre outras situações específicas.
-                  </div>
+                    O inventário judicial é um processo proposto perante o Poder Judiciário para a partilha dos bens de uma pessoa falecida. Esse procedimento é necessário quando há discordância entre os herdeiros quanto à partilha de bens, ainda, quando não há o reconhecimento de uma pessoa como herdeira e/ou meeira, entre outras situações específicas.                  </div>
                 </div>
               </div>
 
