--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
-              <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center"> 
+              <a href="https://api.whatsapp.com/send?phone=5561992411881&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center"> 
                 <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Fale com um especialista!</span>
               </a>
             </div>
@@ -75,7 +75,7 @@
         <div class="row">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="box">
-              <img src="assets/img/1.png" class="img-fluid rounded" alt="">
+              <img src="assets/img/1a.png" class="img-fluid rounded" alt="">
               <h3>
                 Estratégias tributárias eficientes para reduzir ao máximo os impostos sobre a herança.
               </h3>
@@ -91,7 +91,7 @@
           </div>
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="600">
             <div class="box">
-              <img src="assets/img/3.png" class="img-fluid" alt="">
+              <img src="assets/img/3b.png" class="img-fluid" alt="">
               <h3>
                 Soluções jurídicas de alto nível para minimizar o tempo do inventário.
               </h3>
@@ -113,7 +113,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/4.png" class="img-fluid rounded" alt="">
+            <img src="assets/img/4.jpeg" class="img-fluid rounded" alt="">
           </div>
 
           <div class="col-lg-8 mt-5 mt-lg-0 d-flex">
@@ -210,7 +210,7 @@
     <!-- CONTATO ESPECIALISTA  -->
     <section class="about" data-aos="fade-up">
       <div class="text-center">
-        <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center" >
+        <a href="https://api.whatsapp.com/send?phone=5561992411881&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center" >
           <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Quero falar com um especialista!</span>
         </a>
       </div>
@@ -272,7 +272,7 @@
             </h1>
             <div data-aos="fade-up" data-aos-delay="600" class="text-center">
               <div class="text-center text-lg-start ">
-                <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+                <a href="https://api.whatsapp.com/send?phone=5561992411881&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                   <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Agende uma consulta</span>
                 </a>
               </div>
@@ -347,7 +347,7 @@
     <!-- Especialista -->
     <section class="about" data-aos="fade-up">
       <div class="text-center">
-        <a href="https://api.whatsapp.com/send?phone=5561992513418&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+        <a href="https://api.whatsapp.com/send?phone=5561992411881&text=Oi!%20gostaria%20de%20falar%20com%20um(a)%20especialista%20em%20inventario." target="_blank" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
           <i class="bi bi-whatsapp" style="padding-right: 1rem;"></i><span>Fale com um especialista!</span>
         </a>
       </div>
@@ -542,7 +542,7 @@
   <footer id="footer" class="footer">
     <div class="container">
       <div class="copyright">
-        &copy; <strong><span>Terra & Mendonca</span></strong>
+        &copy; <strong><span>Terra & Mendonca Advocacia</span></strong>
       </div>
     </div>
   </footer>
