adicionado icone whatsapp

--- a/index.html
+++ b/index.html
@@ -534,6 +534,7 @@
 
     </section>
     <!-- End F.A.Q Section -->
+    <a href="https://api.whatsapp.com/send?phone=5561992411881&text=Oi!%20gostaria%20de%20agendar%20uma%20consulta." class="float" target="_blank"><i class="bi bi-whatsapp my-float"></i></a>
 
   </main>
   <!-- End #main -->
