--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <img src="assets/img/5.png" class="img-fluid rounded" alt="">
+            <img src="assets/img/5.webp" class="img-fluid rounded" alt="">
           </div>
 
         </div>
@@ -558,7 +558,6 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
