ajustados textos no faq

--- a/index.html
+++ b/index.html
@@ -443,7 +443,8 @@
                 </h2>
                 <div id="faq-content-6" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    O inventário judicial é um processo proposto perante o Poder Judiciário para a partilha dos bens de uma pessoa falecida. Esse procedimento é necessário quando há discordância entre os herdeiros quanto à partilha de bens, ainda, quando não há o reconhecimento de uma pessoa como herdeira e/ou meeira, entre outras situações específicas.                  </div>
+                    O inventário judicial é um processo proposto perante o Poder Judiciário para a partilha dos bens de uma pessoa falecida. Esse procedimento é necessário quando há discordância entre os herdeiros quanto à partilha de bens, ainda, quando não há o reconhecimento de uma pessoa como herdeira e/ou meeira, entre outras situações específicas.
+                  </div>
                 </div>
               </div>
 
@@ -468,7 +469,7 @@
                 </h2>
                 <div id="faq-content-8" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    Para que o inventário extrajudicial possa ser realizado em cartório, é essencial que as partes estejam plenamente de acordo com o método escolhido, ou seja, a via extrajudicial, e, ao menos, parcialmente de acordo com os termos da partilha. Além disso, a presença de herdeiros menores de idade ou incapazes (pessoas sob tutela legal), na maioria dos casos, impede a realização do inventário extrajudicial. 
+                    Para que o inventário possa ser realizado em cartório, é essencial que as partes estejam plenamente de acordo com o método escolhido, ou seja, a via extrajudicial, e, ao menos, parcialmente de acordo com os termos da partilha. Vale destacar que a presença de herdeiros menores de idade ou incapazes (pessoas sob tutela legal) não impede a realização do inventário extrajudicial, segundo a Resolução do CNJ n. 571/2024.
                   </div>
                 </div>
               </div>
